insert data into firebase databse

--- a/app/src/main/res/layout/activity_himshi_1.xml
+++ b/app/src/main/res/layout/activity_himshi_1.xml
@@ -92,7 +92,8 @@
             android:layout_height="wrap_content"
             android:text="Submit"
             android:layout_marginTop="30dp"
-            android:layout_gravity="center">
+            android:layout_gravity="center"
+            android:id="@+id/submit">
         </Button>
 
     </LinearLayout>
